# ogrenciapp

./: .gitignore  Cargo.toml
.github/workflows/: rust.yml
src/: api.rs  database.rs  main.rs  ui.rs
ui/: guncelle.html  new.html  sil.html  table.html  tablo.html  update.html  yeni.html
